--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14.5.0",
+    "npm": "6.14.5"
+},
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
