--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "nodemailer-smtp-transport": "^2.7.4",
+    "socket.io": "^3.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
